Fix navbar overlap

--- a/client/style.less
+++ b/client/style.less
@@ -23,3 +23,9 @@
 .max-width {
     width: 100%;
 }
+
+// Make room for navbar
+
+body {
+    padding-top: 40px;
+}
